# clip-video

./: .autopilot-active  .gitignore  CLAUDE.md  DISCOVERY.md  LICENSE  PROJECT_DEFINITION.md  README.md  SPEC-agentic-highlights.md  SPEC.md  pyproject.toml  videos.txt
.claude/: settings.local.json
.discovery/: discoveries.json  graph.json  session.json
.discovery-archive-20260110/: discoveries.json  graph.json
.knowledge/: README.md  security.md  seo.md  testing.md  writing.md
brands/KCD-UK/: config.json
brands/KCD-UK/transcripts/: .transcription_progress.json  Adrian Mouat - Supply Chain Security and the Real World Lessons From Incidents.json  Andrew Garner   Duncan Wright - Baillie Gifford’s Kubernetes Cloud Journey.json  Anna Aitchison - Kubernetes Cluster Architecture Demystifyed.json  Cat Morris   Derik Evangelista - From Panic to Peace Making K8s Controller Observability Suck Less.json  Christian Melendez - Performance-Aware Autoscaling on Kubernetes.json  (+28 more)
brands/example/: config.json
src/clip_video/: __init__.py  batch.py  cli.py  config.py  costs.py  errors.py  ffmpeg.py  ffmpeg_binary.py  logging.py  progress.py  search.py  selection.py  state.py  storage.py
tests/: __init__.py  test_batch.py  test_captions.py  test_cli_review.py  test_costs.py  test_enhancements.py  test_errors_logging.py  test_highlights.py  test_llm.py  test_llm_validation.py  test_lyric_match.py  test_lyrics.py  test_portrait.py  test_review_queue.py  test_search.py  test_validation_checker.py  test_validation_criteria.py  test_validation_orchestrator.py
(+47 files in other folders)
