[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clip-video"
version = "0.1.0"
description = "Intelligent video clip extraction tool for lyric matching and highlights generation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Clip Video Team" }
]
keywords = ["video", "clips", "transcription", "ffmpeg", "whisper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
clip-video = "clip_video.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/clip_video"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
